адаптив под планшеты

--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
 </head>
 
 <body>
+   <div id="toTop"><i class="fas fa-chevron-up"></i></div>
    <header class="menu-bar">
       <div class="container">
          <div class="row">
-            <div class="col-xl-2">
+            <div class="col-xl-2 logo-bar">
                <img src="img/logo.png" alt="My Landing" class="logo">
+               <button class="menu-icon"><i class="fas fa-bars"></i></button>
             </div>
             <div class="col-xl-8 ml-auto align-self-center">
                <nav>
                   <ul class="menu d-flex justify-content-end">
-                     <li class="menu__item"><a href="#">Home</a></li>
-                     <li class="menu__item"><a href="#">About</a></li>
-                     <li class="menu__item"><a href="#">Servicing</a></li>
-                     <li class="menu__item"><a href="#">Portfolio</a></li>
-                     <li class="menu__item"><a href="#">Blog</a></li>
-                     <li class="menu__item"><a href="#">Contact us</a></li>
+                     <li class="menu__item"><a href="/"><i class="fas fa-home"></i></a></li>
+                     <li class="menu__item"><a href="#about">About</a></li>
+                     <li class="menu__item"><a href="#service">Servicing</a></li>
+                     <li class="menu__item"><a href="#portfolio">Portfolio</a></li>
+                     <li class="menu__item"><a href="#blog">Blog</a></li>
+                     <li class="menu__item"><a href="#contact">Contact us</a></li>
                      <li class="menu__item"><i class="fas fa-search"></i></li>
                   </ul>
                </nav>
@@ -50,7 +52,7 @@
          </div>
       </div>
    </header>
-   <section class="about">
+   <section class="about" id="about">
       <div class="container">
          <div class="row justify-content-center">
             <div class="col-xl-8">
@@ -60,19 +62,19 @@
             </div>
          </div>
          <div class="row justify-content-around">
-            <div class="col-xl-3">
+            <div class="col-xl-3 col-md-6">
                <img src="img/internet.png" alt="">
                <h3 class="about_h3">Awesome Icons</h3>
                <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero
                   molestiae et, nisi error!</p>
             </div>
-            <div class="col-xl-3">
+            <div class="col-xl-3 col-md-6">
                <img src="img/transfer.png" alt="">
                <h3 class="about_h3">One Page</h3>
                <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero
                   molestiae et, nisi error!</p>
             </div>
-            <div class="col-xl-3">
+            <div class="col-xl-3 col-md-6">
                <img src="img/head.png" alt="">
                <h3 class="about_h3">Fully Responsive</h3>
                <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero
@@ -81,7 +83,7 @@
          </div>
       </div>
    </section>
-   <section class="services">
+   <section class="services" id="service">
       <div class="container">
          <div class="row justify-content-center">
             <div class="col-xl-8">
@@ -91,7 +93,7 @@
             </div>
          </div>
          <div class="row justify-content-center">
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-md-6">
                <div class="our_card">
                   <i class="fas fa-search icon"></i>
                   <h3 class="about_h3">Research</h3>
@@ -100,7 +102,7 @@
                   <button class="button-services">Read more</button>
                </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-md-6">
                <div class="our_card">
                   <i class="fas fa-images icon"></i>
                   <h3 class="about_h3">Portfolio</h3>
@@ -109,7 +111,7 @@
                   <button class="button-services">Read more</button>
                </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-md-6">
                <div class="our_card">
                   <i class="fas fa-question icon"></i>
                   <h3 class="about_h3">Support</h3>
@@ -118,7 +120,7 @@
                   <button class="button-services">Read more</button>
                </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-md-6">
                <div class="our_card">
                   <i class="fas fa-book icon"></i>
                   <h3 class="about_h3">Documentation</h3>
@@ -127,7 +129,7 @@
                   <button class="button-services">Read more</button>
                </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-md-6">
                <div class="our_card">
                   <i class="fas fa-code icon"></i>
                   <h3 class="about_h3">Development</h3>
@@ -136,7 +138,7 @@
                   <button class="button-services">Read more</button>
                </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-md-6">
                <div class="our_card">
                   <i class="fas fa-pencil-alt icon"></i>
                   <h3 class="about_h3">Design</h3>
@@ -148,7 +150,7 @@
          </div>
       </div>
    </section>
-   <section class="portfolio">
+   <section class="portfolio" id="portfolio">
       <div class="container">
          <div class="row justify-content-center">
             <div class="col-xl-8">
@@ -162,42 +164,42 @@
             </div>
          </div>
          <div class="row filter aligh_img">
-            <div filter="wd" class="col-xl-4">
+            <div filter="wd" class="col-xl-4 col-md-6">
                <img src="img/item1.png" alt="">
                <div class="text">
                   <h5>Hand Watch</h5>
                   <p>Web design</p>
                </div>
             </div>
-            <div filter="moc" class="col-xl-4">
+            <div filter="moc" class="col-xl-4 col-md-6">
                <img src="img/item2.png" alt="">
                <div class="text">
                   <h5>One Day Pass</h5>
                   <p>Mockups</p>
                </div>
             </div>
-            <div filter="wd" class="col-xl-4">
+            <div filter="wd" class="col-xl-4 col-md-6">
                <img src="img/item3.png" alt="">
                <div class="text">
                   <h5>Modal T-shirt</h5>
                   <p>Web design</p>
                </div>
             </div>
-            <div filter="moc" class="col-xl-4">
+            <div filter="moc" class="col-xl-4 col-md-6">
                <img src="img/item4.png" alt="">
                <div class="text">
                   <h5>Flask</h5>
                   <p>Mockups</p>
                </div>
             </div>
-            <div filter="ud" class="col-xl-4">
+            <div filter="ud" class="col-xl-4 col-md-6">
                <img src="img/item5.png" alt="">
                <div class="text">
                   <h5>Eplemost</h5>
                   <p>Ui/Ux Design</p>
                </div>
             </div>
-            <div filter="ud" class="col-xl-4">
+            <div filter="ud" class="col-xl-4 col-md-6">
                <img src="img/item6.png" alt="">
                <div class="text">
                   <h5>The kitchens</h5>
@@ -224,7 +226,7 @@
             </div>
          </div>
          <div class="row justify-content-around">
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-md-6">
                <div class="price">
                   <div class="price__head">
                      <p>Free Trail</p>
@@ -243,7 +245,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-md-6">
                <div class="price">
                   <div class="price__head">
                      <p>Basic</p>
@@ -262,7 +264,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-md-6">
                <div class="price">
                   <div class="price__head">
                      <p>Ultimates</p>
@@ -452,7 +454,7 @@
          </div>
       </div>
    </section>
-   <section class="services">
+   <section class="services" id="blog">
       <div class="container">
          <div class="row justify-content-center">
             <div class="col-xl-8">
@@ -463,7 +465,7 @@
          </div>
          <div class="row left justify-content-between">
             <div class="blog-item ">
-               <img src="img/blog1.png" alt="">
+               <img src="img/blog1.png" alt="" class="img-fluid">
             </div>
             <div class="blog-item ">
                <div class="blog">
@@ -479,7 +481,7 @@
          </div>
          <div class="row right justify-content-between">
             <div class="blog-item">
-               <img src="img/blog2.png" alt="">
+               <img src="img/blog2.png" alt="" class="img-fluid">
             </div>
             <div class="blog-item">
                <div class="blog">
@@ -496,7 +498,7 @@
          </div>
          <div class="row left justify-content-between">
             <div class="blog-item">
-               <img src="img/blog3.png" alt="">
+               <img src="img/blog3.png" alt="" class="img-fluid">
             </div>
             <div class="blog-item">
                <div class="blog">
@@ -518,7 +520,7 @@
          </div>
       </div>
    </section>
-   <footer class="footer">
+   <footer class="footer" id="contact">
       <div class="container">
          <div class="row justify-content-center">
             <div class="col-xl-8">
