--- a/index.html
+++ b/index.html
@@ -530,15 +530,15 @@
             </div>
          </div>
          <div class="row justify-content-around">
-            <div class="col-xl-3">
+            <div class="col-xl-3 col-md-6">
                <div class="circle"><i class="fas fa-map-marker-alt"></i></div>
                <p>Nobinagar savar,<br>Dhaka Bangladesh</p>
             </div>
-            <div class="col-xl-3">
+            <div class="col-xl-3 col-md-6">
                <div class="circle"><i class="fas fa-phone fa-rotate-90"></i></div>
                <p>+8801743331996<br>+8801928737807</p>
             </div>
-            <div class="col-xl-3">
+            <div class="col-xl-3 col-md-6">
                <div class="circle"><i class="fas fa-envelope"></i></div>
                <p>quickmasud@gmail.com<br>quickmasud@yahoo.com</p>
             </div>
