update readme.md file

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
          </div>    
       </div>
    </footer>
-   <footer class="rules">All rights Reserved © 2019`</footer>
+   <footer class="rules">All rights Reserved © 2019</footer>
    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
       </script>
